--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 
   </head>
   <body>
-
     <div class="container-fluid" style="display: flex; width: 100%;">
       <img id="logoD" src="img/banner.png">
     </div>
@@ -107,34 +106,83 @@
         </a>
       </div>
     </div>
-    <div class="container-fluid mt-2">
+    <!-- --------news----------- -->
+    <div class="container-fluid" id="sty_ne">
+      <p id="p_ne">Hoạt động nỗi bật</p>
       <div class="row">
-        <div class="col-md-3" style="background-color: gray;">
-          aa
+        <div class="col-xs-2" id="dis1">
         </div>
-        <div class="col-md-9" style="background-color: gray;">
-          aa ê
+        <div class="col-xs-8" id="dis2">
+          <!-- ----car------ -->
+          <div class="row">
+            <div class="col-xs-4">
+              <div class="card" id="card_news">
+                <img class="card-img-top" src="img/dtvq1.jpg" id="img_card">
+                <div class="card-body">
+                  <p class="card-title text-center" id="ch">Hội trại 2022</p>
+                  <p class="card-text" id="ch1">Hưởng ứng phong trào hoạt động hè 2022, Chi
+                    đoàn thôn Vân Quật đã...</p>
+                  <div id="btn_dt">
+                    <a href="index_HD1.html" class="btn btn-primary"  id="btn_a">Xem chi
+                      tiết</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="card" id="card_news">
+                <img class="card-img-top" src="img/dtvq2.jpg" id="img_card">
+                <div class="card-body">
+                  <p class="card-title text-center" id="ch">Vân Quật - CĐKT ss2</p>
+                  <p class="card-text" id="ch1">Tiếp nối không khí của hội tại, BCH Đoàn
+                    thôn Vân Quật tiếp tục tổ...</p>
+                  <div id="btn_dt">
+                    <a href="index_HD2.html" class="btn btn-primary"  id="btn_a">Xem chi
+                      tiết</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-xs-4">
+              <div class="card" id="card_news">
+                <img class="card-img-top" src="img/dtvq3.jpg" id="img_card">
+                <div class="card-body">
+                  <p class="card-title text-center" id="ch">Hoạt động thiện nguyện</p>
+                  <p class="card-text" id="ch1">Trao gửi yêu thương. Đoàn viên thôn Vân
+                    Quật chung tay..</p>
+                  <div id="btn_dt">
+                    <a href="index_HD3.html" class="btn btn-primary" id="btn_a">Xem chi
+                      tiết</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- -----end ----car------ -->
         </div>
+        <div class="col-xs-2" id="dis1"> </div>
       </div>
     </div>
-    <div class="container-fluid bg-light mt-2"
-      style="box-shadow: 2px 2px 4px #dfdbdb;  background-image: url('img/ft1.jpg');   filter: blur(1px);
-    -webkit-filter: blur(0px); height: 200px;">
+    <!-- --------endnews----------- -->
+
+    <!-- ---------footer-------- -->
+    <div class="container-fluid bg-light " id="ft_bg">
       <div class="row">
         <div class="col-xs-6 ">
           <p id="ft_h">
             THÔNG TIN LIÊN HỆ
           </p>
           <ul id="ul_ft">
-            <li><img src="img/icon/home.png" style="width: 15px; ">
+            <li><img src="img/icon/home.png" id="ic_ft1">
               Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
             </li>
-            <li> <img src="img/icon/map.png" style="width: 15px;">
+            <li> <img src="img/icon/map.png" id="ic_ft1">
               Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
               Quảng Nam
             </li>
-            <li> <img src="img/icon/contact.png"
-                style="width: 15px;"> doanthonvanquat@gmail.com
+            <li> <img src="img/icon/contact.png" id="ic_ft1">
+              doanthonvanquat@gmail.com
             </li>
           </ul>
           <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
@@ -147,10 +195,11 @@
             THEO DÕI CHÚNG TÔI
           </p>
           <ul id="ul_ft">
-            <li><img src="img/icon/fb.jpg"
-                style="width: 40px; border-radius: 15px; ">
-              <a href="https://www.facebook.com/profile.php?id=100082551411057"
-                style="color: #810505;">Tuổi Trẻ Vân Quật Duy Thành</a> </li>
+            <li><img src="img/icon/fb.jpg" id="ic_ft">
+              <a
+                href="https://www.facebook.com/profile.php?id=100082551411057"
+                style="color: #810505;">Tuổi Trẻ Vân Quật Duy
+                Thành</a> </li>
           </ul>
         </div>
       </div>
@@ -163,10 +212,10 @@
       </h6>
       <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
     </footer>
-
     <audio id="audio_p">
       <source src="./audio/GiaiDieuTuHao.mp3">
     </audio>
+    <!-- ---------end footer-------- -->
   </body>
   <script>
         var audio = document.getElementById("audio_p");
