--- a/index_GT.html
+++ b/index_GT.html
@@ -194,29 +194,28 @@
         </div>
 
         <!-- -------------end conten info--------------- -->
-        <div class="container-fluid bg-light mt-2"
-            style="box-shadow: 2px 2px 4px #dfdbdb;  background-image: url('img/ft1.jpg');   filter: blur(1px);
-            -webkit-filter: blur(0px); height: 200px;">
+        <!-- ---------footer-------- -->
+        <div class="container-fluid bg-light " id="ft_bg">
             <div class="row">
                 <div class="col-xs-6 ">
                     <p id="ft_h">
                         THÔNG TIN LIÊN HỆ
                     </p>
                     <ul id="ul_ft">
-                        <li><img src="img/icon/home.png" style="width: 15px; ">
+                        <li><img src="img/icon/home.png" id="ic_ft1">
                             Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
                         </li>
-                        <li> <img src="img/icon/map.png" style="width: 15px;">
+                        <li> <img src="img/icon/map.png" id="ic_ft1">
                             Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
                             Quảng Nam
                         </li>
-                        <li> <img src="img/icon/contact.png"
-                                style="width: 15px;"> doanthonvanquat@gmail.com
+                        <li> <img src="img/icon/contact.png" id="ic_ft1">
+                            doanthonvanquat@gmail.com
                         </li>
                     </ul>
                     <!-- <a style="color: #0099FF; float: left;">Đoàn TNCH Hồ Chí Minh Thôn Vân Quật</a>
-                    <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
-                    <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
+              <a style="color: #0099FF; float: left;">Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh QUảng Nam</a><br>
+              <a style="color: #0099FF; float: left;">doanthonvanquat@gmail.com</a> -->
 
                 </div>
                 <div class="col-xs-6 ">
@@ -224,8 +223,11 @@
                         THEO DÕI CHÚNG TÔI
                     </p>
                     <ul id="ul_ft">
-                        <li><img src="img/icon/fb.jpg" style="width: 40px; border-radius: 15px; ">
-                           <a href="https://www.facebook.com/profile.php?id=100082551411057" style="color: #810505;">Tuổi Trẻ Vân Quật Duy Thành</a> </li>
+                        <li><img src="img/icon/fb.jpg" id="ic_ft">
+                            <a
+                                href="https://www.facebook.com/profile.php?id=100082551411057"
+                                style="color: #810505;">Tuổi Trẻ Vân Quật Duy
+                                Thành</a> </li>
                     </ul>
                 </div>
             </div>
@@ -233,17 +235,15 @@
         <footer id="ft" class="bg-light mt-2">
             <h6>
                 Trang web được phát triển bởi
-                <a
-                    href="https://www.facebook.com/VietAn.Tran.1606.CE001"
+                <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
                     style="color: #810505;">Trần Viết An</a>
             </h6>
-            <h6>Trang web đang được triển khai trên nên tảng Github cá
-                nhân</h6>
+            <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
         </footer>
-
         <audio id="audio_p">
             <source src="./audio/GiaiDieuTuHao.mp3">
         </audio>
+        <!-- ---------end footer-------- -->
     </body>
     <script>
         var audio = document.getElementById("audio_p");
